<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:entries="@array/countryArrays"
                        android:gravity="center"
                        android:prompt="@string/countryPrompt"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_1_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/InitialScore"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp"
                        android:onClick="tryT1"
                        android:text="@string/Try" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="conT1"
                        android:text="@string/conversion" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="dropGoalT1"
                        android:text="@string/dropGoal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="penaltyT1"
                        android:text="@string/penalty" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:entries="@array/countryArrays"
                        android:gravity="center"
                        android:prompt="@string/countryPrompt"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_2_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/InitialScore"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp"
                        android:onClick="tryT2"
                        android:text="@string/Try" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="conT2"
                        android:text="@string/conversion" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="dropGoalT2"
                        android:text="@string/dropGoal" />

                    <Button
                        android:id="@+id/penalityT2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        android:onClick="penaltyT2"
                        android:text="@string/penalty" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ImageDes"
                android:layout_centerInParent="true"
                android:alpha=".25"
                android:scaleType="fitCenter"
                android:src="@drawable/image1" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:onClick="resetScores"
            android:text="@string/reset" />
    </LinearLayout>
</ScrollView>